--- a/css/style.css
+++ b/css/style.css
@@ -7,3 +7,16 @@ html {
 ::before {
     box-sizing: inherit;
 }
+
+.body {
+    font-family: 'Lato', sans-serif;
+    line-height: 1.5;
+    background-color: rgb(242, 242, 242);
+    margin: 0 auto;
+    padding: 20px;
+    max-width: 1000px;    
+}
+
+.header{
+    font-size: 20px;
+}
