--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,8 @@ html {
     background-color: rgb(242, 242, 242);
     margin: 0 auto;
     padding: 20px;
-    max-width: 1000px;    
+    max-width: 1000px;
+    word-break: break-word;    
 }
 
 .header{
