--- a/css/form.css
+++ b/css/form.css
@@ -3,7 +3,8 @@
     padding: 20px;
     margin: 1px 20px 1px 20px;
     display: grid;
-    grid-template-columns: 5fr 1fr;
+    grid-template-columns: 1fr auto;
+    grid-gap: 20px;
 }
 
 @media (max-width: 768px) {
@@ -31,6 +32,7 @@
     color: rgb(255, 255, 255);
     padding: 8px;
     margin-left: 15px;
+    border: none;
 }
 
 @media (max-width: 767px) {
